; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_rtclock_native.c_rtc_lapic_set_tsc_deadline_timer.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_rtclock_native.c_rtc_lapic_set_tsc_deadline_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tscFCvtn2t = common dso_local global i32 0, align 4
@DECR_SET_TSC_DEADLINE = common dso_local global i32 0, align 4
@DBG_FUNC_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @rtc_lapic_set_tsc_deadline_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @rtc_lapic_set_tsc_deadline_timer(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %9 = call i64 (...) @rdtsc64()
  store i64 %9, i64* %7, align 8
  store i64 0, i64* %8, align 8
  %10 = load i64, i64* %3, align 8
  %11 = icmp sgt i64 %10, 0
  br i1 %11, label %12, label %26

12:                                               ; preds = %2
  %13 = load i64, i64* %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i64 @deadline_to_decrementer(i64 %13, i64 %14)
  store i64 %15, i64* %5, align 8
  %16 = load i64, i64* %4, align 8
  %17 = load i64, i64* %5, align 8
  %18 = add nsw i64 %16, %17
  store i64 %18, i64* %8, align 8
  %19 = load i64, i64* %5, align 8
  %20 = load i32, i32* @tscFCvtn2t, align 4
  %21 = call i64 @tmrCvt(i64 %19, i32 %20)
  store i64 %21, i64* %6, align 8
  %22 = load i64, i64* %7, align 8
  %23 = load i64, i64* %6, align 8
  %24 = add nsw i64 %22, %23
  %25 = call i32 @lapic_set_tsc_deadline_timer(i64 %24)
  br label %28

26:                                               ; preds = %2
  %27 = call i32 @lapic_set_tsc_deadline_timer(i64 0)
  br label %28

28:                                               ; preds = %26, %12
  %29 = load i32, i32* @DECR_SET_TSC_DEADLINE, align 4
  %30 = load i32, i32* @DBG_FUNC_NONE, align 4
  %31 = or i32 %29, %30
  %32 = load i64, i64* %4, align 8
  %33 = load i64, i64* %3, align 8
  %34 = load i64, i64* %7, align 8
  %35 = call i32 (...) @lapic_get_tsc_deadline_timer()
  %36 = call i32 @KERNEL_DEBUG_CONSTANT(i32 %31, i64 %32, i64 %33, i64 %34, i32 %35, i32 0)
  %37 = load i64, i64* %8, align 8
  ret i64 %37
}

declare dso_local i64 @rdtsc64(...) #1

declare dso_local i64 @deadline_to_decrementer(i64, i64) #1

declare dso_local i64 @tmrCvt(i64, i32) #1

declare dso_local i32 @lapic_set_tsc_deadline_timer(i64) #1

declare dso_local i32 @KERNEL_DEBUG_CONSTANT(i32, i64, i64, i64, i32, i32) #1

declare dso_local i32 @lapic_get_tsc_deadline_timer(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
